# smart-clip

./: .gitignore  Package.swift  README.md  build.sh  install.sh  release.sh
.github/workflows/: release.yml
SmartClip/: AppDelegate.swift  Info.plist  SmartClipApp.swift
SmartClip/Models/: ClipboardItem.swift  LicenseState.swift
SmartClip/Services/: ClipboardMonitor.swift  DatabaseService.swift  ImageService.swift  KeychainService.swift  LicenseService.swift
SmartClip/Utilities/: Constants.swift  ImageCache.swift  KeyablePanel.swift
SmartClip/ViewModels/: ClipboardViewModel.swift
SmartClip/Views/: ClipList.swift  ContentView.swift  ItemCard.swift  LicenseGate.swift  SearchBar.swift  SettingsMenu.swift  UpdateBanner.swift
SmartClipTests/: SmartClipTests.swift
clipvault/: .env  package-lock.json  package.json
clipvault/src/: App.css  App.tsx  main.tsx
clipvault/src-tauri/: .env  .env.example  Cargo.toml  build.rs  tauri.conf.json
clipvault/src-tauri/capabilities/: default.json
clipvault/src-tauri/icons/: icon.icns
clipvault/src-tauri/src/: clipboard.rs  commands.rs  db.rs  image_handler.rs  lib.rs  licensing.rs  main.rs
landing/: index.html  robots.txt  sitemap.xml
landing/blog/: index.html
marketing-agent/: .env  README.md  run.py
marketing-agent/agents/: copywriter.md  orchestrator.md  outreach.md  research.md  seo.md
marketing-agent/context/: brand-voice.md  icp.md  product.md
marketing-agent/memory/: performance-notes.md  posted-log.md
marketing-agent/output/: weekly-package-2026-03-07.md  weekly-research-2026-03-07.md
(+12 files in other folders)
